<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.planning.RegisterFragment">

    <Button
        android:id="@+id/resgisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:layout_below="@+id/phoneNumberInput"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:hint="@string/username"
        android:maxLength="20"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:layout_below="@+id/usernameInput"
        android:layout_alignLeft="@+id/usernameInput"
        android:layout_alignStart="@+id/usernameInput" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="11"
        android:hint="@string/phone"
        android:inputType="phone"
        android:layout_below="@+id/passwordInput2"
        android:layout_alignLeft="@+id/passwordInput2"
        android:layout_alignStart="@+id/passwordInput2" />

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"
        android:hint="@string/passc"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordInput"
        android:layout_alignLeft="@+id/passwordInput"
        android:layout_alignStart="@+id/passwordInput" />

</RelativeLayout>

