<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.planning.LoginFragment">

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:maxLength="20"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/passwordET"
        android:layout_alignStart="@+id/passwordET"
        android:hint="@string/username"/>

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:text="@string/signin"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="212dp" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:maxLength="20"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="133dp"
        android:hint="@string/pass"/>

</RelativeLayout>

