<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="@color/yellow">


    <TextView
        android:id="@+id/userTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center"
        android:text="Hello, User!"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/greydark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="65dp"
        android:layout_height="32dp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="7dp"
        android:layout_marginStart="14dp"
        android:textSize="10sp"
        android:text="@string/logout"
        android:background="@color/grey"/>

    <EditText
        android:id="@+id/taskET"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/place_holder_task"
        android:inputType="textShortMessage|textPersonName"
        tools:focusable="true"
        android:layout_below="@+id/userTV"
        android:layout_alignLeft="@+id/logout_button"
        android:layout_alignStart="@+id/logout_button" />

    <Button
        android:id="@+id/insert_button"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignBaseline="@+id/taskET"
        android:layout_alignBottom="@+id/taskET"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/taskET"
        android:layout_toRightOf="@+id/taskET"
        android:text="@string/add_task"
        android:background="@color/grey"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_height="320dp"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_below="@+id/taskET"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />
</RelativeLayout>